--- a/operation/inventory.ini
+++ b/operation/inventory.ini
@@ -1,1 +1,7 @@
+[localhost]
+local ansible_python_interpreter="/usr/bin/env python"
+
 [bastion]
+
+[bastion:vars]
+ansible_python_interpreter=/usr/bin/python3
