--- a/helm-charts/stable/scalar-envoy/values.yaml
+++ b/helm-charts/stable/scalar-envoy/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 3
 
 image:
   repository: envoyproxy/envoy
@@ -12,6 +12,9 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+
+podDisruptionBudget: |
+  maxUnavailable: 1
 
 strategy:
   rollingUpdate:
@@ -33,6 +36,16 @@ securityContext: {}
 
 service:
   type: LoadBalancer
+  annotations: {}
+  ports:
+    envoy:
+      port: 50051
+      targetPort: envoy
+      protocol: TCP
+    envoy-priv:
+      port: 50052
+      targetPort: envoy-priv
+      protocol: TCP
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -51,3 +64,122 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+serviceMonitor:
+  enabled: false
+  interval: "15s"
+  targetLabels: []
+  podTargetLabels: []
+  # namespace: monitoring
+  additionalLabels: {}
+
+files:
+  envoy.yaml: |-
+    admin:
+      access_log_path: /dev/stdout
+      address:
+        socket_address:
+          address: 0.0.0.0
+          port_value: 9901
+    static_resources:
+      listeners:
+      - name: listener_0
+        address:
+          socket_address:
+            address: 0.0.0.0
+            port_value: 50051
+        filter_chains:
+        - filters:
+          - name: envoy.http_connection_manager
+            config:
+              codec_type: auto
+              stat_prefix: ingress_http
+              route_config:
+                name: local_route
+                virtual_hosts:
+                - name: local_service
+                  domains: ["*"]
+                  routes:
+                  - match: { prefix: "/" }
+                    route: { cluster: scalar-ledger }
+                  cors:
+                    allow_origin_string_match:
+                      - safe_regex:
+                          google_re2: {}
+                          regex: \*
+                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
+                    allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
+                    max_age: "1728000"
+                    expose_headers: custom-header-1,grpc-status,grpc-message,rpc.status-bin
+              http_filters:
+              - name: envoy.grpc_web
+              - name: envoy.cors
+              - name: envoy.router
+      - name: listener_1
+        address:
+          socket_address: 
+            address: 0.0.0.0 
+            port_value: 50052
+        filter_chains:
+        - filters:
+          - name: envoy.http_connection_manager
+            config:
+              codec_type: auto
+              stat_prefix: ingress_http
+              route_config:
+                name: local_route
+                virtual_hosts:
+                - name: local_service
+                  domains: ["*"]
+                  routes:
+                  - match: { prefix: "/" }
+                    route: { cluster: scalar-ledger-privileged }
+                  cors:
+                    allow_origin_string_match:
+                      - safe_regex:
+                          google_re2: {}
+                          regex: \*
+                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
+                    allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
+                    max_age: "1728000"
+                    expose_headers: custom-header-1,grpc-status,grpc-message,rpc.status-bin
+              http_filters:
+              - name: envoy.grpc_web
+              - name: envoy.cors
+              - name: envoy.router
+      clusters:
+      - name: scalar-ledger
+        connect_timeout: 0.25s
+        type: strict_dns
+        lb_policy: round_robin
+        hosts: 
+          socket_address: 
+            address: scalar-ledger-headless
+            port_value: 50051
+        health_checks:
+          - timeout: 1s
+            interval: 5s
+            interval_jitter: 1s
+            unhealthy_threshold: 3
+            healthy_threshold: 3
+            grpc_health_check: {}
+        http2_protocol_options: {}
+        drain_connections_on_host_removal: true
+       
+      - name: scalar-ledger-privileged
+        connect_timeout: 0.25s
+        type: strict_dns
+        lb_policy: round_robin
+        hosts: 
+          socket_address: 
+            address: scalar-ledger-headless
+            port_value: 50052
+        health_checks:
+          - timeout: 1s
+            interval: 5s
+            interval_jitter: 1s
+            unhealthy_threshold: 3
+            healthy_threshold: 3
+            grpc_health_check: {}
+        http2_protocol_options: {}
+        drain_connections_on_host_removal: true
