--- a/helm-charts/stable/scalar-ledger/values.yaml
+++ b/helm-charts/stable/scalar-ledger/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 3
 
 image:
   repository: scalarlabs/scalar-ledger
@@ -15,6 +15,9 @@ cassandra:
   host: cassandra-lb.internal.scalar-labs.com.
   port: 9042
   rf: 1
+
+podDisruptionBudget: |
+  maxUnavailable: 1
 
 strategy:
   rollingUpdate:
