--- a/helm-charts/stable/scalar-ledger/values.yaml
+++ b/helm-charts/stable/scalar-ledger/values.yaml
@@ -60,6 +60,18 @@ resources: {}
 
 nodeSelector: {}
 
-tolerations: []
+tolerations:
+- key: kubernetes.io/app
+  operator: Equal
+  value: scalardl
+  effect: NoSchedule
 
-affinity: {}
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: agentpool
+          operator: In
+          values:
+          - "scalardl"
