install auto completions for kubectl

--- a/operation/roles/scalar.kubectl/tasks/setup.yml
+++ b/operation/roles/scalar.kubectl/tasks/setup.yml
@@ -12,3 +12,6 @@
     src: "{{ KUBE_CONFIG }}"
     dest: "/home/{{ ansible_user }}/.kube/config"
     mode: '0644'
+
+- name: install kubectl completion
+  shell: "{{ KUBECTL_PATH }} completion bash > /etc/bash_completion.d/kubectl"
