--- a/.github/workflows/azure_cassandra_example.yml
+++ b/.github/workflows/azure_cassandra_example.yml
@@ -25,6 +25,10 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
+      - name: "Prepare SSH key and known hosts"
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
       - name: 'Terraform Format'
         uses: hashicorp/terraform-github-actions@master
         with:
