--- a/.github/workflows/azure_cassandra_example.yml
+++ b/.github/workflows/azure_cassandra_example.yml
@@ -25,10 +25,15 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
-      - name: "Prepare SSH key and known hosts"
+      - name: "Prepare SSH known hosts"
         run: |
           mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          ssh-keygen -b 2048 -t rsa -f ~/.ssh/id_rsa -q -N ""
           ssh-keyscan github.com >> ~/.ssh/known_hosts
+          chmod 600 ~/.ssh/id_rsa ~/.ssh/known_hosts
+          eval $(ssh-agent)
+          ssh-add "~/.ssh/id_rsa"
       - name: 'Terraform Format'
         uses: hashicorp/terraform-github-actions@master
         with:
