--- a/.github/workflows/azure_cassandra_example.yml
+++ b/.github/workflows/azure_cassandra_example.yml
@@ -33,7 +33,7 @@ jobs:
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           chmod 600 ~/.ssh/id_rsa ~/.ssh/known_hosts
           eval $(ssh-agent)
-          ssh-add "~/.ssh/id_rsa"
+          ssh-add ~/.ssh/id_rsa
       - name: 'Terraform Format'
         uses: hashicorp/terraform-github-actions@master
         with:
