use hashicorp images for prepare ssh

--- a/.github/workflows/azure_cassandra_example.yml
+++ b/.github/workflows/azure_cassandra_example.yml
@@ -26,6 +26,7 @@ jobs:
       - name: 'Checkout'
         uses: actions/checkout@master
       - name: "Prepare SSH known hosts"
+        uses: hashicorp/terraform-github-actions@master
         run: |
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
