--- a/.github/workflows/azure_cassandra_example.yml
+++ b/.github/workflows/azure_cassandra_example.yml
@@ -19,9 +19,6 @@ jobs:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      TF_VERSION: 0.12.19
-      TF_ACTIONS_COMMENT: false
-      TF_TEST_WORKING_DIR: ./examples/azure/cassandra
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
@@ -36,10 +33,11 @@ jobs:
           ssh-add ~/.ssh/id_rsa
       - uses: hashicorp/setup-terraform@v1
         with:
-            terraform_version: ${{ TF_VERSION }}
+          terraform_version: 0.12.19
       
-      - run: terraform init
-        working-directory: ${{ TF_TEST_WORKING_DIR }}
+      - name: Terraform Init
+        run: terraform init
+        working-directory: ./examples/azure/cassandra
         
       # - name: 'Terraform Format'
       #   uses: hashicorp/terraform-github-actions@master
