--- a/.github/workflows/azure_cassandra_example.yml
+++ b/.github/workflows/azure_cassandra_example.yml
@@ -34,25 +34,11 @@ jobs:
       - name: Terraform Init
         run: terraform init
         working-directory: ./examples/azure/cassandra
-        
-      # - name: 'Terraform Format'
-      #   uses: hashicorp/terraform-github-actions@master
-      #   with:
-      #     tf_actions_subcommand: 'fmt'
-      #     tf_actions_working_dir: ${{ env.TF_TEST_WORKING_DIR }}
-      #     tf_actions_version: ${{ env.TF_VERSION }}
-      #     tf_actions_comment: ${{ env.TF_ACTIONS_COMMENT }}
-      # - name: 'Terraform Init'
-      #   uses: hashicorp/terraform-github-actions@master
-      #   with:
-      #     tf_actions_subcommand: 'init'
-      #     tf_actions_working_dir: ${{ env.TF_TEST_WORKING_DIR }}
-      #     tf_actions_version: ${{ env.TF_VERSION }}
-      #     tf_actions_comment: ${{ env.TF_ACTIONS_COMMENT }}
-      # - name: 'Terraform Validate'
-      #   uses: hashicorp/terraform-github-actions@master
-      #   with:
-      #     tf_actions_subcommand: 'validate'
-      #     tf_actions_working_dir: ${{ env.TF_TEST_WORKING_DIR }}
-      #     tf_actions_version: ${{ env.TF_VERSION }}
-      #     tf_actions_comment: ${{ env.TF_ACTIONS_COMMENT }}
+
+      - name: Terraform Init
+        run: terraform init
+        working-directory: ./examples/azure/cassandra
+
+      - name: Terraform Plan
+        run: terraform plan
+        working-directory: ./examples/azure/cassandra
