--- a/.github/workflows/azure_cassandra_example.yml
+++ b/.github/workflows/azure_cassandra_example.yml
@@ -35,10 +35,6 @@ jobs:
         run: terraform init
         working-directory: ./examples/azure/cassandra
 
-      - name: Terraform Init
-        run: terraform init
-        working-directory: ./examples/azure/cassandra
-
-      - name: Terraform Plan
-        run: terraform plan
+      - name: Terraform validate
+        run: terraform validate
         working-directory: ./examples/azure/cassandra
