--- a/.github/workflows/azure_cassandra_example.yml
+++ b/.github/workflows/azure_cassandra_example.yml
@@ -19,6 +19,7 @@ jobs:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      TF_TEST_WORKING_DIR.: ./examples/azure/cassandra
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
@@ -29,12 +30,13 @@ jobs:
       
       - name: Terraform Format
         run: terraform fmt -check
-        working-directory: ./examples/azure/cassandra
+        working-directory: ${{ env.TF_TEST_WORKING_DIR }}
 
       - name: Terraform Init
         run: terraform init
-        working-directory: ./examples/azure/cassandra
+        working-directory: ${{ env.TF_TEST_WORKING_DIR }}
 
-      - name: Terraform validate
+      - name: Terraform Validate
         run: terraform validate
-        working-directory: ./examples/azure/cassandra
+        working-directory: ${{ env.TF_TEST_WORKING_DIR }}
+
