--- a/.github/workflows/azure_kubernetes_example.yaml
+++ b/.github/workflows/azure_kubernetes_example.yaml
@@ -1,17 +1,17 @@
 name: 'Terraform test for Kubernetes module of Azure Example'
 on:
-  pull_request:
-    branches:
-      - master
-    paths:
-      - 'modules/azure/kubernetes/**'
-      - 'examples/azure/kubernetes/**'
+  # pull_request:
+  #   branches:
+  #     - master
+  #   paths:
+  #     - 'modules/azure/kubernetes/**'
+  #     - 'examples/azure/kubernetes/**'
   push:
-    branches:
-      - master
-    paths:
-      - 'modules/azure/kubernetes/**'
-      - 'examples/azure/kubernetes/**'
+    # branches:
+    #   - master
+    # paths:
+    #   - 'modules/azure/kubernetes/**'
+    #   - 'examples/azure/kubernetes/**'
 jobs:
   terraform:
     name: 'Terraform'
@@ -27,24 +27,19 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
-      - name: 'Terraform Format'
-        uses: hashicorp/terraform-github-actions@master
+      
+      - uses: hashicorp/setup-terraform@v1
         with:
-          tf_actions_subcommand: 'fmt'
-          tf_actions_working_dir: ${{ env.TF_TEST_WORKING_DIR }}
-          tf_actions_version: ${{ env.TF_VERSION }}
-          tf_actions_comment: ${{ env.TF_ACTIONS_COMMENT }}
-      - name: 'Terraform Init'
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_subcommand: 'init'
-          tf_actions_working_dir: ${{ env.TF_TEST_WORKING_DIR }}
-          tf_actions_version: ${{ env.TF_VERSION }}
-          tf_actions_comment: ${{ env.TF_ACTIONS_COMMENT }}
-      - name: 'Terraform Validate'
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_subcommand: 'validate'
-          tf_actions_working_dir: ${{ env.TF_TEST_WORKING_DIR }}
-          tf_actions_version: ${{ env.TF_VERSION }}
-          tf_actions_comment: ${{ env.TF_ACTIONS_COMMENT }}
+          terraform_version: 0.12.19
+      
+      - name: Terraform Format
+        run: terraform fmt -check
+        working-directory: ${{ env.TF_TEST_WORKING_DIR }}
+
+      - name: Terraform Init
+        run: terraform init
+        working-directory: ${{ env.TF_TEST_WORKING_DIR }}
+
+      - name: Terraform Validate
+        run: terraform validate
+        working-directory: ${{ env.TF_TEST_WORKING_DIR }}
