add azuredeploy for plan kubernetes modules

--- a/.github/workflows/azure_kubernetes.yaml
+++ b/.github/workflows/azure_kubernetes.yaml
@@ -1,15 +1,17 @@
-name: 'Terraform test for Cassandra module of Azure Example'
+name: 'Terraform test for Kubernetes module of Azure'
 on:
   # pull_request:
   #   branches:
   #     - master
   #   paths:
-  #     - 'examples/azure/cassandra/**'
+  #     - 'modules/azure/kubernetes/**'
+  #     - 'test/modules/azuredeploy/kubernetes/**'
   push:
     # branches:
     #   - master
     # paths:
-    #   - 'examples/azure/cassandra/**'
+    #   - 'modules/azure/kubernetes/**'
+    #   - 'test/modules/azuredeploy/kubernetes/**'
 jobs:
   terraform:
     name: 'Terraform'
@@ -19,7 +21,7 @@ jobs:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      TF_TEST_WORKING_DIR.: ./examples/azure/cassandra
+      TF_TEST_WORKING_DIR: ./test/modules/azuredeploy/kubernetes
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
@@ -27,7 +29,12 @@ jobs:
       - uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 0.12.21
-      
+        
+      - name: 'Set up to using dummy local variables'
+        run: |
+          rm -f remote.tf locals.tf
+          mv locals.tf.dummy locals.tf
+
       - name: Terraform Format
         run: terraform fmt -check
         working-directory: ${{ env.TF_TEST_WORKING_DIR }}
@@ -38,4 +45,8 @@ jobs:
 
       - name: Terraform Validate
         run: terraform validate
+        working-directory: ${{ env.TF_TEST_WORKING_DIR }}
+
+      - name: 'Terraform Plan'
+        run: terraform plan
         working-directory: ${{ env.TF_TEST_WORKING_DIR }}
