--- a/helm-charts/stable/scalar-ledger/templates/configmap.yaml
+++ b/helm-charts/stable/scalar-ledger/templates/configmap.yaml
@@ -9,9 +9,10 @@ data:
     #!/bin/bash
     ./bin/scalar-ledger -config ledger.properties
   init.cql: |
-    DROP KEYSPACE IF EXISTS scalar;
-    CREATE KEYSPACE IF NOT EXISTS scalar WITH REPLICATION = {'class': 'SimpleStrategy', 'replication_factor': 1 };
-    CREATE KEYSPACE IF NOT EXISTS coordinator WITH replication = {'class': 'SimpleStrategy','replication_factor': 1 };
+    CREATE KEYSPACE IF NOT EXISTS scalar WITH replication = {'class': 'NetworkTopologyStrategy', 'dc1': {{ .Values.cassandra.rf }} };
+    CREATE KEYSPACE IF NOT EXISTS coordinator WITH replication = {'class': 'NetworkTopologyStrategy', 'dc1': {{ .Values.cassandra.rf }} };
+    ALTER KEYSPACE system_auth WITH replication = {'class': 'NetworkTopologyStrategy', 'dc1': {{ .Values.cassandra.rf }} };
+
     CREATE TABLE IF NOT EXISTS scalar.asset (
         id text,
         age int,
@@ -41,11 +42,13 @@ data:
         tx_version int,
         PRIMARY KEY (id, age)
     ) WITH compaction = { 'class' : 'LeveledCompactionStrategy' };
+
     CREATE TABLE IF NOT EXISTS scalar.asset_metadata (
         asset_id text,
         latest_age int,
         PRIMARY KEY (asset_id)
     ) WITH compaction = { 'class' : 'LeveledCompactionStrategy' };
+
     CREATE TABLE IF NOT EXISTS scalar.contract (
         id text,
         cert_holder_id text,
@@ -57,11 +60,13 @@ data:
         PRIMARY KEY (cert_holder_id, cert_version, id)
     ) WITH compaction = { 'class' : 'LeveledCompactionStrategy' };
     CREATE INDEX IF NOT EXISTS ON scalar.contract (id);
+
     CREATE TABLE IF NOT EXISTS scalar.contract_class (
         binary_name text,
         byte_code blob,
         PRIMARY KEY (binary_name)
     );
+
     CREATE TABLE IF NOT EXISTS scalar.function (
         id text,
         binary_name text,
@@ -69,6 +74,7 @@ data:
         registered_at bigint,
         PRIMARY KEY (id)
     ) WITH compaction = { 'class' : 'LeveledCompactionStrategy' };
+
     CREATE TABLE IF NOT EXISTS scalar.certificate (
         holder_id text,
         version int,
@@ -76,6 +82,7 @@ data:
         registered_at bigint,
         PRIMARY KEY (holder_id, version)
     );
+
     CREATE TABLE IF NOT EXISTS coordinator.state (
         tx_id text,
         tx_state int,
