--- a/helm-charts/stable/scalar-envoy/Chart.yaml
+++ b/helm-charts/stable/scalar-envoy/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 appVersion: "1.0"
 description: Implementation of Envoy for scalar-ledger. Envoy is an open source edge and service proxy, designed for cloud-native applications. 
+icon: https://scalar-labs.com/wp-content/themes/scalar/assets/img/logo_scalar.svg
 keywords:
 - envoy
 - proxy
