--- a/.github/workflows/helm_charts_scalar_envoy.yml
+++ b/.github/workflows/helm_charts_scalar_envoy.yml
@@ -4,22 +4,30 @@ on:
     branches:
       - master
     paths:
-      - 'helm-charts/stable/scalar-envoy/**'
+      - 'charts/stable/scalar-envoy/**'
   push:
     branches:
       - master
     paths:
-      - 'helm-charts/stable/scalar-envoy/**'
+      - 'charts/stable/scalar-envoy/**'
 jobs:
-  hrval:
+  ct:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       
-      - name: Validate Helm Releases in test dir
-        uses: stefanprodan/hrval-action@v3.1.0
+      - name: Run chart-testing (lint)
+        id: lint
+        uses: helm/chart-testing-action@v1.0.0-alpha.3
         with:
-          helmRelease: helm-charts/stable/scalar-envoy
-          kubernetesVersion: 1.15.7
-          helmVersion: v2
+          command: lint
+          config: .github/ct.yaml
+
+
+      # - name: Validate Helm Releases in test dir
+      #   uses: stefanprodan/hrval-action@v3.1.0
+      #   with:
+      #     helmRelease: helm-charts/stable/scalar-envoy
+      #     kubernetesVersion: 1.15.7
+      #     helmVersion: v2
       
