--- a/.github/ct.yaml
+++ b/.github/ct.yaml
@@ -3,7 +3,7 @@ helm-extra-args: --timeout 600
 check-version-increment: true
 debug: true
 chart-dirs: 
-  - charts
+  - charts/stable
 chart-repos:
   - stable=https://kubernetes-charts.storage.googleapis.com/
   - bitnami=https://charts.bitnami.com
