--- a/charts/stable/scalar-ledger/values.yaml
+++ b/charts/stable/scalar-ledger/values.yaml
@@ -25,7 +25,7 @@ strategy:
     maxUnavailable: 1
   type: RollingUpdate
 
-imagePullSecrets: 
+imagePullSecrets:
 - name: reg-docker-secrets
 nameOverride: ""
 fullnameOverride: ""
@@ -44,7 +44,7 @@ securityContext: {}
 service:
   name: scalar-ledger-headless
   type: ClusterIP
-  clusterIP: None # headless
+  clusterIP: None
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
