--- a/.github/ct.yaml
+++ b/.github/ct.yaml
@@ -4,6 +4,7 @@ check-version-increment: true
 debug: true
 chart-dirs: 
   - charts/stable
-chart-repos:
-  - stable=https://kubernetes-charts.storage.googleapis.com/
-  - bitnami=https://charts.bitnami.com
+validate-maintainers: false
+# chart-repos:
+#   - stable=https://kubernetes-charts.storage.googleapis.com/
+#   - bitnami=https://charts.bitnami.com
