--- a/.github/workflows/helm_charts_scalar.yml
+++ b/.github/workflows/helm_charts_scalar.yml
@@ -22,6 +22,29 @@ jobs:
         with:
           command: lint
           config: .github/ct.yaml
+    
+  kubeval-chart:
+    runs-on: ubuntu-latest
+    needs: lint-chart
+    strategy:
+      matrix:
+        # the versions supported by kubeval are the ones for
+        # which a folder exists at
+        # https://github.com/instrumenta/kubernetes-json-schema
+        k8s:
+          - v1.15.7
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      
+      - name: Fetch history for chart testing
+        run: git fetch --prune --unshallow
+      
+      - name: Run kubeval
+        env:
+          KUBERNETES_VERSION: ${{ matrix.k8s }}
+        run: .github/kubeval.sh 
 
 
       # - name: Validate Helm Releases in test dir
