--- a/.github/workflows/helm_charts_scalar.yml
+++ b/.github/workflows/helm_charts_scalar.yml
@@ -41,3 +41,32 @@ jobs:
         env:
           KUBERNETES_VERSION: ${{ matrix.k8s }}
         run: .github/kubeval.sh
+
+  install-chart:
+    name: install-chart
+    runs-on: ubuntu-latest
+    needs: 
+      - lint-chart
+      - kubeval-chart
+    strategy:
+      matrix:
+        k8s:
+          - v1.15.7
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Fetch history for chart testing
+        run: git fetch --prune --unshallow
+
+      - name: Create kind ${{ matrix.k8s }} cluster
+        uses: helm/kind-action@v1.0.0-alpha.3
+        with:
+          config: .github/kind-config.yaml
+          node_image: kindest/node:${{ matrix.k8s }}
+
+      - name: Run chart-testing (install)
+        uses: helm/chart-testing-action@v1.0.0-alpha.3
+        with:
+          command: install
+          config: .github/ct.yaml
