add production values for envoy

--- a/charts/stable/scalar-envoy/production-values.yaml
+++ b/charts/stable/scalar-envoy/production-values.yaml
@@ -35,7 +35,7 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
+  type: LoadBalancer
   annotations: {}
   ports:
     envoy:
@@ -61,32 +61,32 @@ resources: {}
 
 nodeSelector: {}
 
-tolerations: []
-# - key: kubernetes.io/app
-#   operator: Equal
-#   value: scalardl
-#   effect: NoSchedule
+tolerations:
+- key: kubernetes.io/app
+  operator: Equal
+  value: scalardl
+  effect: NoSchedule
 
-affinity: {}
-  # nodeAffinity:
-  #   requiredDuringSchedulingIgnoredDuringExecution:
-  #     nodeSelectorTerms:
-  #     - matchExpressions:
-  #       - key: agentpool
-  #         operator: In
-  #         values:
-  #         - "scalardl"
-  # podAntiAffinity:
-  #   preferredDuringSchedulingIgnoredDuringExecution:
-  #   - weight: 50
-  #     podAffinityTerm:
-  #       labelSelector:
-  #         matchExpressions:
-  #         - key: app
-  #           operator: In
-  #           values:
-  #           - envoy
-  #       topologyKey: kubernetes.io/hostname
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: agentpool
+          operator: In
+          values:
+          - "scalardl"
+  podAntiAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+    - weight: 50
+      podAffinityTerm:
+        labelSelector:
+          matchExpressions:
+          - key: app
+            operator: In
+            values:
+            - envoy
+        topologyKey: kubernetes.io/hostname
 
 serviceMonitor:
   enabled: false
