--- a/.github/workflows/helm_charts_scalar.yml
+++ b/.github/workflows/helm_charts_scalar.yml
@@ -45,7 +45,7 @@ jobs:
   install-chart:
     name: install-chart
     runs-on: ubuntu-latest
-    needs: 
+    needs:
       - lint-chart
       - kubeval-chart
     strategy:
@@ -64,6 +64,11 @@ jobs:
         with:
           config: .github/kind-cluster.yaml
           node_image: kindest/node:${{ matrix.k8s }}
+
+      - name: Install reg docker secret
+        run: |
+          kubectl cluster-info
+          kubectl create secret docker-registry reg-docker-secrets --docker-server=https://index.docker.io/v2/ --docker-username=${{ secrets.DOCKERHUB_USER }} --docker-password=${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
       - name: Run chart-testing (install)
         uses: helm/chart-testing-action@v1.0.0-rc.2
