fix test install scalardl

--- a/charts/stable/scalar-ledger/values.yaml
+++ b/charts/stable/scalar-ledger/values.yaml
@@ -87,7 +87,7 @@ affinity: {}
   #       topologyKey: kubernetes.io/hostname
 
 initContainer:
-  enabled: false
+  enabled: true
   image:
     repository: cassandra
     tag: latest
